@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.129 (gritter) 8/7/06
+ * Sccsid @(#)n3.c	1.130 (gritter) 8/9/06
  */
 
 /*
@@ -1677,16 +1677,17 @@ macname(int rq)
 		return "???";
 }
 
+const char nmctab[] = {
+	000,000,000,000,000,000,000,000,
+	000,000,000,000,000,000,000,000,
+	001,002,003,000,004,005,000,006,
+	000,000,000,000,000,000,000,000,
+	000
+};
+
 static tchar
 mgetach(void)
 {
-	static const char nmctab[] = {
-		000,000,000,000,000,000,000,000,
-		000,000,000,000,000,000,000,000,
-		001,001,001,000,001,001,000,001,
-		000,000,000,000,000,000,000,000,
-		000
-	};
 	tchar	i;
 	int	j;
 
